# Datoxidize

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
backend/: .env  Cargo.toml
backend/resources/: files.db  table_creation.sql  test_insert.sql
backend/src/: db_api.rs  html_creation.rs  main.rs  server_db_api.rs  server_sync_core.rs  sync_core.rs
client/: .env  Cargo.toml
client/copy_dir/dir1/example_dir/: lophostemon_occurrences.csv
client/resources/: client.db
client/src/: client_db_api.rs  client_http_sync.rs  http_core.rs  http_sync.rs  main.rs  old_sync_logic.rs  sync_logic.rs
client/storage/: old_sync_logic.rs
client/test_resources/: config.json
common/: Cargo.toml
common/src/: common_db_utils.rs  config_utils.rs  db_utils.rs  file_utils.rs  lib.rs  router_utils.rs  shared_structs.rs  vault_utils.rs
datoxidize/: .env  .gitignore  Cargo.toml  Dockerfile
datoxidize/copy_dir/: test
datoxidize/src/: html_creation.rs  main.rs  sync_logic.rs  web_server.rs
datoxidize/templates/: directory.html
datoxidize/test_resources/: config.json
datoxidize/test_resources/random_test_files/: p2.csv
server/: .env  Cargo.toml  Dockerfile
server/resources/: vault_config.json
server/src/: main.rs  sync_core.rs
static_files/: index.html
