[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
axum = "0.6.1"
filetime = "0.2.20"
dotenvy = "0.15.6"
rayon = "1.6.1"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1.22.0", features = ["full"] }
